--- a/index.html
+++ b/index.html
@@ -3,27 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ISHOW Admin — Feedback Dashboard</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <title>ISHOW Admin Login</title>
   <link rel="stylesheet" href="admin.css">
 </head>
+<body class="login-body">
 
-<body>
+  <div class="login-box">
+    <h2>ISHOW Admin</h2>
+    <p class="login-sub">Restricted Access</p>
 
-  <!-- LOGIN SCREEN -->
-  <div id="loginScreen" class="login-box">
-    <h1>Admin Login</h1>
-    <input type="password" id="adminPassword" placeholder="Enter Admin Password">
-    <button id="loginBtn">Login</button>
-    <p id="loginMsg"></p>
-  </div>
+    <input type="password" id="password" placeholder="Enter Admin Password">
 
-  <!-- DASHBOARD -->
-  <div id="dashboard" class="hidden">
-    <h1 class="title">ISHOW Feedback Dashboard</h1>
+    <button onclick="loginAdmin()">Login</button>
 
-    <div id="feedbackList" class="list"></div>
+    <p id="login-error"></p>
   </div>
 
   <script src="admin.js"></script>
